--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
         <a href="Drones.html">
             <div class="product" style="width: 220px; height: 360px;">
-                <img src="ImagenesHTML/drone.png" alt="dronelogo">
+                <img src="ImagenesHTML/drone.png" alt="dronelogo"  style="width: auto; height: 140px;">
                 <h2 style="font-size: 1.2rem;">Emprende tus vuelos a la maxima velocidad</h2>
             </div>
         </a>
