--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             </div>
         </a>
 
-        <a href="Drones.html">
+        <a href="drones.html">
             <div class="product" style="width: 220px; height: 260px;">
                 <img src="ImagenesHTML/drone.png" alt="dronelogo"  style="width: auto; height: 140px;">
                 <h2 style="font-size: 1.2rem;">Emprende tus vuelos a la maxima velocidad</h2>
