--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
        
         <a href="Aeromodelismo.html">
             <div class="product" style="width: 220px; height: 260px;">
-                <img src="ImagenesHTML/yak54.jpg" alt="aerologo">
+                <img src="ImagenesHTML/yak54.jpg" alt="aerologo" style="width: auto; height: 155px;">
                 <h2 style="font-size: 1.2rem;">Visita nuestros diversos aeromodelos</h2>
             </div>
         </a>
