--- a/drones.html
+++ b/drones.html
@@ -17,9 +17,9 @@
     
     <div class="catalog">
         <div class="product">
-            <img src="ImagenesHTML/lipocargador2s.webp" alt="lipocargador2s">
-            <h2>Drone EMAX TinyHawk RTF #3001</h2>
+            <img src="ImagenesHTML/tinyhawk3rtf" alt="lipocargador2s">
+            <h2>Drone EMAX TinyHawk 3 Analgo RTF #3001</h2>
             <p>Tu mejor compañero para volar indoor</p>
             <p>(Incluye una bateria Lipo 1s 350mah, Radiocontrol y Googles FPV Transporter)</p>
-            <p class="price">$2,560</p>
+            <p class="price">$5,899</p>
         </div>
