--- a/drones.html
+++ b/drones.html
@@ -17,9 +17,17 @@
     
     <div class="catalog">
         <div class="product">
-            <img src="ImagenesHTML/tinyhawk3rtf" alt="lipocargador2s">
+            <img src="ImagenesHTML/tinyhawk3rtf,jpg" alt="lipocargador2s">
             <h2>Drone EMAX TinyHawk 3 Analgo RTF #3001</h2>
             <p>Tu mejor compañero para volar indoor</p>
-            <p>(Incluye una bateria Lipo 1s 350mah, Radiocontrol y Googles FPV Transporter)</p>
+            <p>(Incluye una bateria Lipo 1s 350mah, Radiocontrol, cargador y Googles FPV Transporter)</p>
             <p class="price">$5,899</p>
+        </div>
+        
+        <div class="product">
+            <img src="ImagenesHTML/tinyhawk3rtfhd.webp" alt="lipocargador2s">
+            <h2>Drone EMAX TinyHawk 3 Digital RTF #3002</h2>
+            <p>Tu mejor compañero para volar indoor con mucha mejor calidad de vido </p>
+            <p>(Incluye una bateria Lipo 1s 350mah, Radiocontrol, cargador y Googles FPV Transporter)</p>
+            <p class="price">$9,399</p>
         </div>
