--- a/drones.html
+++ b/drones.html
@@ -20,7 +20,7 @@
             <img src="ImagenesHTML/tinyhawk3rtf,jpg" alt="lipocargador2s">
             <h2>Drone EMAX TinyHawk 3 Analgo RTF #3001</h2>
             <p>Tu mejor compañero para volar indoor</p>
-            <p>(Incluye una bateria Lipo 1s 350mah, Radiocontrol, cargador y Googles FPV Transporter)</p>
+            <p>(Incluye una bateria Lipo 1s 350mah, Radiocontrol, cargador y Googles FPV Transporter Analogo)</p>
             <p class="price">$5,899</p>
         </div>
         
@@ -28,7 +28,7 @@
             <img src="ImagenesHTML/tinyhawk3rtfhd.webp" alt="lipocargador2s">
             <h2>Drone EMAX TinyHawk 3 Digital RTF #3002</h2>
             <p>Tu mejor compañero para volar indoor con mucha mejor calidad de vido </p>
-            <p>(Incluye una bateria Lipo 1s 350mah, Radiocontrol, cargador y Googles FPV Transporter)</p>
+            <p>(Incluye una bateria Lipo 1s 350mah, Radiocontrol, cargador y Googles FPV Transporter HD)</p>
             <p class="price">$9,399</p>
         </div>
  <a href="index.html"> <img src="ImagenesHTML/Volver.png" alt="volver"> </a>
