--- a/drones.html
+++ b/drones.html
@@ -17,7 +17,7 @@
      <a href="index.html"> <img src="ImagenesHTML/Volver.png" alt="volver"> </a>
     <div class="catalog">
         <div class="product">
-            <img src="ImagenesHTML/tinyhawk3rtf,jpg" alt="lipocargador2s">
+            <img src="ImagenesHTML/tinyhawk3rtf.jpg" alt="lipocargador2s">
             <h2>Drone EMAX TinyHawk 3 Analgo RTF #3001</h2>
             <p>Tu mejor compañero para volar indoor</p>
             <p>(Incluye una bateria Lipo 1s 350mah, Radiocontrol, cargador y Googles FPV Transporter Analogo)</p>
