--- a/drones.html
+++ b/drones.html
@@ -31,4 +31,7 @@
             <p>(Incluye una bateria Lipo 1s 350mah, Radiocontrol, cargador y Googles FPV Transporter HD)</p>
             <p class="price">$9,399</p>
         </div>
- <a href="index.html"> <img src="ImagenesHTML/Volver.png" alt="volver"> </a>
+ </main>
+    <a href="index.html"> <img src="ImagenesHTML/Volver.png" alt="volver"> </a>
+</body>
+</html>
