--- a/traxxas_accex.html
+++ b/traxxas_accex.html
@@ -18,7 +18,8 @@
     <a href="index.html">
         <img src="ImagenesHTML/Volver.png" alt="volver">
     </a>
-    <a href="index.html">
+    
+    <a href="Traxxas.html">
         <img src="ImagenesHTML/Volver anterior.png" alt="volver">
     </a>
 
@@ -92,7 +93,7 @@
     <a href="index.html">
         <img src="ImagenesHTML/Volver.png" alt="volver">
     </a>
-    <a href="index.html">
+    <a href="Traxxas.html">
         <img src="ImagenesHTML/Volver anterior.png" alt="volver">
     </a>
 
