--- a/index.html
+++ b/index.html
@@ -36,6 +36,13 @@
                 <h2 style="font-size: 1.2rem;">Emprende tus vuelos a la maxima velocidad</h2>
             </div>
         </a>
+
+          <a href="FPV.html">
+            <div class="product" style="width: 220px; height: 260px;">
+                <img src="ImagenesHTML/trans2" alt="fpvlogo.png">
+                <h2 style="font-size: 1.2rem;">Conoce nuestros productos FPV </h2>
+            </div>
+        </a>
         
         <a href="https://wa.me/528332801590">
             <div class="product" style="width: 220px; height: 260px;">
