--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             </div>
         </a>
 
-          <a href="FPV.html">
+          <a href="fpv.html">
             <div class="product" style="width: 220px; height: 260px;">
                 <img src="ImagenesHTML/trans2" alt="fpvlogo.png">
                 <h2 style="font-size: 1.2rem;">Conoce nuestros productos FPV </h2>
