--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
           <a href="fpv.html">
             <div class="product" style="width: 220px; height: 260px;">
-                <img src="ImagenesHTML/trans2" alt="fpvlogo.png">
+                <img src="ImagenesHTML/trans2.webp" alt="fpvlogo">
                 <h2 style="font-size: 1.2rem;">Conoce nuestros productos FPV </h2>
             </div>
         </a>
