--- a/fpv.html
+++ b/fpv.html
@@ -66,13 +66,14 @@
               <a href="drones.html">
                 <img src="ImagenesHTML/drone.png" alt="dronelogo"  style="width: auto; height: 140px;">
                 <h2 style="font-size: 1.2rem;">Conoce nuestra coleccion de drones </h2>
-            </div>
               </a>
+            </div>
           
             <div class="product">
                 <a href="traxxas_accex.html"> 
                  <img src="ImagenesHTML/Traxxas-logo.png" alt="Traxxas Logo">
-                <h2> Aquí puedes encontrar accesorios y complementos para tus vehículos Traxxas </h2> </a>
+                <h2> Aquí puedes encontrar accesorios y complementos para tus vehículos Traxxas </h2> 
+                </a>
             </div>
 
         </div>
