--- a/fpv.html
+++ b/fpv.html
@@ -20,7 +20,7 @@
      <main>
         <div class="catalog">
             <div class="product">
-                <img src="ImagenesHTML/Trans2.webp" alt="TrnsporterFPV">
+                <img src="ImagenesHTML/trans2.webp" alt="TrnsporterFPV">
                 <h2> Googgles FPV EMAX Transporter 2 #4011</h2>
                 <p> Con tus googles EMAX Transporter 2 podras disfutar de tus vuelos en primera persona aprovechando su compatibilidad con todos sus productos analogos</p>
             
