--- a/drones.html
+++ b/drones.html
@@ -60,6 +60,7 @@
             <div class="product" style="width: 220px; height: 260px;">
                 <img src="ImagenesHTML/trans2.webp" alt="fpvlogo">
                 <h2 style="font-size: 1.2rem;">Conoce nuestros productos FPV </h2>
+                <p> Aqui podras encontrar todo lo que necesitas para armarte con tus drones </p>
             </div>
         </a>
         
