--- a/drones.html
+++ b/drones.html
@@ -59,10 +59,9 @@
            <a href="fpv.html">
             <div class="product" style="width: 220px; height: 260px;">
                 <img src="ImagenesHTML/trans2.webp" alt="fpvlogo">
-                <h2 style="font-size: 1.2rem;">Conoce nuestros productos FPV </h2>
+                <h2 style="font-size: 1.2rem;">Conoce nuestros productos FPV </h2> </a>
                 <p> Aqui podras encontrar todo lo que necesitas para armarte con tus drones </p>
             </div>
-        </a>
         
     </div>
  </main>
