--- a/drones.html
+++ b/drones.html
@@ -51,7 +51,7 @@
             <p>(Baterias, cargador y transmisor se venden por separado)</p>
         </div>
         
-           <a href="fpv.html">
+           <a href="fpv.html"
             <div class="product" style="width: 220px; height: 260px;">
                 <img src="ImagenesHTML/trans2.webp" alt="fpvlogo">
                 <h2 style="font-size: 1.2rem;">Conoce nuestros productos FPV </h2> </a>
