--- a/drones.html
+++ b/drones.html
@@ -46,7 +46,7 @@
         
         <div class="product">
             <img src="ImagenesHTML/hawk5.jpg" alt="lipocargador2s">
-            <h2>Dron EMax Pro 5 #3005</h2>
+            <h2>Dron EMAX Pro 5 #3005</h2>
             <p>Tu mejor compañero para volar indoor con mucha mejor calidad de vido </p>
             <p>(Baterias, cargador y transmisor se venden por separado)</p>
         </div>
