--- a/traxxas_accex.html
+++ b/traxxas_accex.html
@@ -80,6 +80,13 @@
             <p>Este complemento te permitirá disfrutar de tu Traxxas por un largo tiempo con el cual podrás disfrutar aún más de tu Traxxas</p>
             <p>(Incluye 2 baterías Lipo iD 7.4v 7600mAh y un cargador EzPeakPlus iD DUAL)</p>
         </div>
+          <a href="fpv.html"
+            <div class="product" style="width: 220px; height: 260px;">
+                <img src="ImagenesHTML/trans2.webp" alt="fpvlogo">
+                <h2 style="font-size: 1.2rem;">Conoce nuestros productos FPV </h2> 
+                <p> Aqui podras encontrar todo lo que necesitas para armarte con tus drones </p>
+            </div>
+            </a>
     </div>
 
     <a href="index.html">
